# eflomal-rs

./: Cargo.toml  README.md
eflomal-cli/: Cargo.toml
eflomal-cli/src/: main.rs
eflomal-core/: Cargo.toml
eflomal-core/src/: alignment.rs  lib.rs  prng.rs  symmetrize.rs  text.rs  types.rs
eflomal-wasm/: Cargo.toml  test.mjs
eflomal-wasm/src/: lib.rs
